--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -34,6 +34,7 @@
 @use "./pages/CartDetails/weAlsoRecom";
 @use "./pages/CartDetails/kurzlichAngesehen";
 @use "./pages/CartDetails/gutzuwissen";
+@use "./pages/CartDetails/anwenSlider";
 
 // Header page
 @use "./components/Header/topBar";
