--- a/src/sass/pages/CartDetails/_comments.scss
+++ b/src/sass/pages/CartDetails/_comments.scss
@@ -74,7 +74,7 @@
               -webkit-appearance: none;
               appearance: none;
               width: 100%;
-              height: 7px; 
+              height: 7px;
               background: black;
               border-radius: 5px;
               outline: none;
@@ -101,7 +101,7 @@
           flex-direction: column;
           height: 100%;
           button {
-              cursor: pointer;
+            cursor: pointer;
             @include learnMore;
             border-radius: 30px;
             border: none;
@@ -394,6 +394,9 @@
                   margin-top: 20px;
                   font-size: 16px;
                 }
+                .comentDate {
+                  display: none;
+                }
               }
               .reviewerComments {
                 margin-left: 30px;
@@ -414,14 +417,14 @@
                   flex-direction: column;
                   gap: 10px;
                   margin-top: 15px;
-                  span{
+                  span {
                     font-size: 14px;
                     margin-left: 5px;
                   }
                   p {
                     font-size: 16px;
                   }
-                  img{
+                  img {
                     margin-left: 4px;
                     width: 100px;
                     height: 100px;
@@ -485,6 +488,127 @@
             border-radius: 5px;
             cursor: pointer;
           }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1134px) {
+  .comments {
+    .container {
+      width: 90%;
+      .row {
+        .reviews {
+          .review {
+            .comment {
+              .reviewInfo {
+                .reviewer {
+                  .comentDate {
+                    display: block;
+                    margin-left: 100px;
+                  }
+                }
+              }
+              .commentDate {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 850px) {
+  .comments {
+    .container {
+      .row {
+        .reviews {
+          .review {
+            .comment {
+              .reviewInfo {
+                .reviewer {
+                  .reviewerComments {
+                    .reviewerComment {
+                      display: flex;
+                      flex-direction: column;
+                      width: 80%;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 620px) {
+  .comments {
+    .container {
+      .row {
+        .reviewStars {
+          display: flex;
+          gap: 20px;
+          .starRating {
+            .ratingNum {
+              h2 {
+                font-size: 35px;
+              }
+            }
+          }
+          .addReview {
+            button {
+              font-size: 13px;
+            }
+          }
+        }
+        .reviews {
+          .review {
+            .comment {
+              margin: 20px 0;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              .reviewInfo {
+                display: flex;
+                flex-direction: column;
+                .reviewer {
+                  .comentDate {
+                    display: none;
+                  }
+                }
+                .reviewerComments {
+                  .reviewerComment {
+                    p {
+                      font-size: 14px;
+                    }
+                  }
+                }
+              }
+              .commentDate {
+                margin-top: 10px;
+                display: block;
+                time {
+                  font-size: 14px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 410px) {
+  .comments {
+    .container {
+      .row {
+        .reviewStars {
+          display: flex;
+          flex-direction: column;
         }
       }
     }
