--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -42,6 +42,9 @@
 @use "./components/Header/brushes";
 @use "./components/Header/faceEyeLips";
 
+// Filter page
+@use "./pages/filter";
+
 // Cart page
 @use "./pages/Cart/cart";
 @use "./pages/Cart/cartPage";
