--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -4,6 +4,7 @@
   padding: 13px 60px;
   transition: background-color 0.3s ease;
   font-size: 14px;
+  cursor: pointer;
   &:hover {
     background-color: #0f0a1f;
   }
