--- a/src/sass/components/Header/_header.scss
+++ b/src/sass/components/Header/_header.scss
@@ -3,7 +3,7 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  background: white; 
+  background: white;
   transition: transform 0.3s ease-in-out;
   z-index: 1000;
   padding-bottom: 20px;
@@ -49,6 +49,11 @@ header {
         top: 2rem;
         right: 2rem;
         font-size: 17px;
+        .searchModul {
+          display: flex;
+          gap: 7px;
+          cursor: pointer;
+        }
         .quantities {
           cursor: pointer;
           background-color: black;
@@ -73,11 +78,12 @@ header {
           margin-right: 25px;
         }
         .lng {
+          cursor: pointer;
           display: flex;
           img {
-            width: 30px;
-            height: 25px;
-            margin-right: 5px;
+            width: 20px;
+            height: 15px;
+            margin: 3px 5px;
           }
           p {
             font-size: 15px;
@@ -114,7 +120,7 @@ header {
 
           &.open {
             opacity: 1;
-            visibility: visible; 
+            visibility: visible;
           }
         }
       }
