--- a/src/sass/pages/Cart/_cartPage.scss
+++ b/src/sass/pages/Cart/_cartPage.scss
@@ -31,10 +31,21 @@
             width: 100%;
             justify-content: space-between;
             border-bottom: 1px solid rgb(224, 219, 219);
-
             .quantity {
               padding-right: 100px;
             }
+            .prc{
+              margin-left: 50px;
+            }
+          }
+          .emptyCart{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+            font-size: 36px;
+            color: rgb(122, 120, 120);
           }
           p {
             font-size: 14px;
@@ -44,7 +55,6 @@
 
           .cartItem {
             width: 100%;
-
             display: flex;
             justify-content: space-between;
             gap: 20px;
@@ -102,8 +112,7 @@
               font-weight: 700;
               margin-top: 20px;
               color: #221c35;
-              width: 100%;
-              margin-left: 60px;
+              margin-right: 40px;
             }
           }
         }
@@ -228,6 +237,11 @@
                 margin-left: 120px;
               }
             }
+            .title{
+              .prc{
+                margin-left: 160px;
+              }
+            }
           }
           .cartPayDetail {
             margin-top: 40px;
@@ -238,7 +252,6 @@
                   display: flex;
                   flex-direction: row;
                   gap: 10px;
-                  // width: 100%;
                   align-items: center;
                   .shopPay {
                     margin-bottom: 7px;
@@ -346,6 +359,27 @@
     }
   }
 }
+
+
+@media (max-width: 560px) {
+  .cartPage {
+    .container {
+      .row {
+        .content {
+          .cartDetail {
+            .cartItem {
+             .price {
+               margin-top: 20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
 
 @media (max-width: 380px) {
   .cartPage {
