--- a/src/sass/pages/CartDetails/_cartDetail.scss
+++ b/src/sass/pages/CartDetails/_cartDetail.scss
@@ -60,6 +60,11 @@
               cursor: pointer;
             }
           }
+          a {
+            p {
+              color: #000;
+            }
+          }
         }
         .productMode {
           font-size: 14px;
@@ -74,9 +79,8 @@
           align-items: center;
           gap: 7px;
           img {
-            width: 15px;
-            height: 15px;
-            margin-right: 5px;
+            width: 20px;
+            height: 20px;
           }
           p {
             font-size: 12px;
